--- a/showapp/Info.plist
+++ b/showapp/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSFaceIDUsageDescription</key>
+	<string>Please allow to continue with face id.</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
@@ -45,18 +47,18 @@
 		<string>googlechromes</string>
 		<string>comgooglemaps</string>
 	</array>
-    <key>NSPhotoLibraryUsageDescription</key>
-        <string>$(PRODUCT_NAME) would like access to your photo  Library</string>
-    <key>NSCameraUsageDescription</key>
-        <string>$(PRODUCT_NAME) would like to use your camera</string>
-    <key>NSMicrophoneUsageDescription</key>
-        <string>$(PRODUCT_NAME) would like to use your microphone (for videos)</string>
-    <key>NSPhotoLibraryAddUsageDescription</key>
-        <string>$(PRODUCT_NAME) would like to save photos to your photo library</string>
-    <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Show your location on the map</string>
-    <key>NSLocationAlwaysUsageDescription</key>
-    <string>Show your location on the map2</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like access to your photo  Library</string>
+	<key>NSCameraUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to use your camera</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to use your microphone (for videos)</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>$(PRODUCT_NAME) would like to save photos to your photo library</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Show your location on the map</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Show your location on the map2</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
